--- a/Calculator_ASPNETCore/wwwroot/index.html
+++ b/Calculator_ASPNETCore/wwwroot/index.html
@@ -6,18 +6,44 @@
     <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js" type="text/javascript"></script>
     <script type="text/javascript">
 
+        var errorMessages = {
+            0: "",
+            1: "Invalid character",
+            2: "Incomplete expression",
+            3: "Parsing error"
+        };
+
         function requestCalc() {
             var msg = document.getElementById("txtInput").value;
-            $.ajax({
-                type: "POST",
-                url: "http://localhost:8000/api/Calculate",
-                contentType: "application/json",
-                data: JSON.stringify(msg),
-                success: function (response) {
-                    let res = JSON.parse(response);
-                    document.getElementById("divResult").innerHTML = res.CalcResult;
-                }
-            });
+
+            if (msg) {
+                $.ajax({
+                    type: "POST",
+                    url: "http://localhost:8000/api/Calculate",
+                    contentType: "application/json",
+                    data: JSON.stringify(msg),
+                    success: function (response) {
+                        let res = JSON.parse(response);
+                        if (res.ErrorCode == 0) {
+                            document.getElementById("divCalcRes").innerHTML = res.CalcResult;
+                            document.getElementById("divPostfix").innerHTML = res.InputInPostfix;
+                            document.getElementById("divPostfixLabel").style.display = "block"
+                            document.getElementById("divErrorMsg").innerHTML = "";
+                        } else {
+                            console.log(res.ErrorCode);
+                            console.log(res.ErrorMessage);
+                            document.getElementById("divErrorMsg").innerHTML = errorMessages[res.ErrorCode];
+                        }
+
+                    }
+                });
+            } else {
+                document.getElementById("divErrorMsg").innerHTML = "";
+                document.getElementById("divCalcRes").innerHTML = "";
+                document.getElementById("divPostfix").innerHTML = "";
+                document.getElementById("divPostfixLabel").style.display = "none";
+            }
+
         }
     </script>
     <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.css">
@@ -43,17 +69,17 @@
             box-shadow: 0 0 8px 0 dodgerblue;
         }
 
-        .inputWithIcon input[type=text] {
+        .divInput input[type=text] {
             padding-left: 42px;
         }
 
-        .inputWithIcon {
+        .divInput {
             position: relative;
             margin: 0 auto;
             width: 45%;
         }
 
-        .inputWithIcon i{
+        .divInput i{
             position:absolute;
             left: 0;
             top: 18px;
@@ -62,34 +88,61 @@
             transition: .3s;
         }
 
-        .inputWithIcon input[type=text]:focus + i {
+        .divInput input[type=text]:focus + i {
             color: #8a2d96;
         }
 
-        .inputWithIcon.inputIconBg i {
+        .divInput.inputIconBg i {
             background-color: #aaa;
             color: #fff;
             padding: 9px 4px;
             border-radius: 4px 0 0 4px;
         }
 
-        #divResult {
-            width:100%;
-            color: white;
-            font-size: 72pt;
-            position:relative;
+        .divResponse {
+            width: 100%;
+            position: relative;
             text-align: center;
+            color: white; 
+        }
+
+
+
+        #divCalcRes {
+            font-size: 72pt;
+        }
+
+        #divPostfixLabel {
+            display: none;
+            font-size: 12px;
+        }
+
+        #divErrorMsg {
+            height: 20px;
+            font-style: italic;
+            color: #eb8038;
         }
 
     </style>
 </head>
 <body>
-    <div class="inputWithIcon">
-        <input id="txtInput" type="text" placeholder="3*(4-5)^6^7" oninput="requestCalc()" />
+    <div class="divInput">
+        <input id="txtInput" type="text" placeholder="e.g. 3*(4-5)^6^7" oninput="requestCalc()" />
         <i class="fa fa-calculator fa-lg fa-fw" aria-hidden="true"></i>
     </div>
-    <div id="divResult">
-        
+    <div class="divResponse">
+        <div id="divErrorMsg">
+
+        </div>
+        <div id="divCalcRes">
+            
+        </div>
+        <div id="divPostfix">
+
+        </div>
+        <div id="divPostfixLabel">
+            (in postfix notation)
+        </div>
     </div>
 </body>
 </html>
