--- a/Calculator_ASPNETCore/wwwroot/index.html
+++ b/Calculator_ASPNETCore/wwwroot/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8" />
     <title></title>
-    <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js" type="text/javascript"></script>
+    <script src="//ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js" type="text/javascript"></script>
     <script type="text/javascript">
 
         var errorMessages = {
@@ -19,7 +19,8 @@
             if (msg) {
                 $.ajax({
                     type: "POST",
-                    url: "http://localhost:8000/api/Calculate",
+                    //url: "https://localhost:5001/api/Calculate",
+                    url: "https://calculatoraspnetcore20200224123521.azurewebsites.net/api/Calculate",
                     contentType: "application/json",
                     data: JSON.stringify(msg),
                     success: function (response) {
